Fix alignment of detail-competency title

--- a/app/styles/newcomponents/detail-competencies.scss
+++ b/app/styles/newcomponents/detail-competencies.scss
@@ -9,7 +9,7 @@
     @include detail-container-actions;
   }
 
-  .detail-learnergroups-content {
+  .detail-competencies-content {
     @include detail-container-content;
   }
 }
